fix: Update to Python 3.13 compatible dependencies and improve setup
- Update PyTorch requirement to >=2.5.0 for Python 3.13 compatibility
- Configure pipeline to use small.en model for reliable performance
- Remove automated setup scripts in favor of manual venv setup
- Update README with simplified installation instructions
- Add .venv/ to .gitignore for better venv support

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ numpy>=1.20.0
 
 # PyTorch (whisper dependency - CPU version)
 # Note: For GPU support, install torch separately with CUDA support
-torch>=2.0.0
-torchaudio>=2.0.0
+# Python 3.13 requires PyTorch 2.5+
+torch>=2.5.0
+torchaudio>=2.5.0
 
 # Additional whisper dependencies
 tiktoken>=0.3.0
