--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,11 @@ openai-whisper>=20231117
 ffmpeg-python>=0.2.0
 
 # Scientific computing (whisper dependency)
-#numpy>=1.20.0 (installed via conda on cluster) 
+numpy>=1.20.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+tqdm>=4.60.0
+pyyaml>=6.0 
 
 # PyTorch (whisper dependency - CPU version)
 # Note: For GPU support, install torch separately with CUDA support
